fixed an extra space in the tooltip

--- a/extension/style.css
+++ b/extension/style.css
@@ -12,7 +12,7 @@
 	border-style:solid;
 	border-color:rgb(60,35,12);
 	border-width:0px 5px 5px 0px;
-	background-color:rgb(105, 161, 249); 	
+	background-color:rgb(155,102,11); 	
 }
 
 .draggable {
